<resources>
    <string name="app_name">CS496Final: Pet Shelter</string>
    <string name="allPeopleButtonText">View All People</string>
    <string name="allPetsButtonText">View All Pets</string>
    <string name="newPersonButtonText">Create a New Person</string>
    <string name="newPetButtonText">Create a New Pet</string>
    <string name="newPersonfnameHint">First Name</string>
    <string name="newPersonlnameHint">Last Name</string>
    <string name="newPersonageHint">Age</string>
    <string name="newPersonaddressHint">Address</string>
    <string name="newPetnameHint">Name</string>
    <string name="newPetageHint">Age</string>
    <string name="newPetspeciesHint">Species</string>
    <string name="newPetweightHint">Weight</string>
    <string name="deletePersonButtonText">Delete Person</string>
    <string name="editPersonButtonText">Edit Person</string>
    <string name="deletePetButtonText">Delete Pet</string>
    <string name="editPetButtonText">Edit Pet</string>
    <string name="confirmDeletePersonButtonText">Confirm Delete</string>
    <string name="confirmDeletePetButtonText">Confirm Delete</string>
    <string name="confirmRemovePetButtonText">Confirm Removal</string>
    <string name="newAgeText">New Age</string>
    <string name="newWeightText">New Weight</string>
    <string name="submitPetEditButtonText">Submit Edit</string>
    <string name="editPetSpeciesHint">Species</string>
    <string name="editPetAgeHint">Age</string>
    <string name="editPetWeightHint">Weight</string>
    <string name="newFnameText">New Fist Name</string>
    <string name="newLnameText">New Last Name</string>
    <string name="newPersonAgeText">New Age</string>
    <string name="newAddressText">New Address</string>
    <string name="submitPersonEditButtonText">Submit Edit</string>
    <string name="editPersonAgeHint">Age</string>
    <string name="editPersonAddressHint">Address</string>
    <string name="personViewPetsButtonText">View Pets</string>
    <string name="personAddPetsButtonText">Add Pet</string>
    <string name="confirmAddPetButtonText">Add Pet</string>
    <string name="editPersonFnameHint">First Name</string>
    <string name="editPersonLnameHint">Last Name</string>
    <string name="newSpeciesText">New Species</string>
    <string name="editPetNameHint">Name</string>
    <string name="newNameText">New Name</string>
</resources>
