<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs496.robertscanlon.cs496final.EditPersonActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editPersonFname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editPersonLname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editPersonAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editPersonAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newFnameText"/>

        <EditText
            android:id="@+id/newFnameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editPersonFnameHint"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newLnameText"/>

        <EditText
            android:id="@+id/newLnameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editPersonLnameHint"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newPersonAgeText"/>

        <EditText
            android:id="@+id/newPersonAgeEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editPersonAgeHint"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newAddressText"/>

        <EditText
            android:id="@+id/newAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editPersonAddressHint"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitPersonEditButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitPetEditButtonText" />

</LinearLayout>
