<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cs496.robertscanlon.cs496final.CreatePersonActivity">

    <EditText
        android:id="@+id/newPersonfnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/newPersonfnameHint"/>

    <EditText
        android:id="@+id/newPersonlnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/newPersonlnameHint" />

    <EditText
        android:id="@+id/newPersonageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/newPersonageHint" />

    <EditText
        android:id="@+id/newPersonaddressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/newPersonaddressHint" />

    <Button
        android:id="@+id/newPersonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPersonButtonText" />

</LinearLayout>
