<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs496.robertscanlon.cs496final.EditPetActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editPetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editPetSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editPetAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/editPetWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newAgeText"/>

        <EditText
            android:id="@+id/newAgeEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editPetAgeHint"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newWeightText"/>

        <EditText
            android:id="@+id/newWeightEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/editPetWeightHint"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/submitPetEditButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitPetEditButtonText" />


</LinearLayout>
