<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/allPeoplePerson">

    <TextView
        android:id="@+id/allPeopleFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/allPeopleLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/allPeopleAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/allPeopleAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deletePersonButton"
            android:textSize="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deletePersonButtonText" />

        <Button
            android:id="@+id/editPersonButton"
            android:layout_width="wrap_content"
            android:textSize="10dp"
            android:layout_height="wrap_content"
            android:text="@string/editPersonButtonText"/>

        <Button
            android:id="@+id/personViewPetsButton"
            android:textSize="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personViewPetsButtonText" />

        <Button
            android:id="@+id/personAddPetsButton"
            android:textSize="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personAddPetsButtonText" />
    </LinearLayout>

</LinearLayout>